// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Head should render Head with all check checkbox 1`] = `
<WithStyles(ForwardRef(TableHead))>
  <WithStyles(ForwardRef(TableRow))>
    <WithStyles(ForwardRef(TableCell))
      padding="checkbox"
    >
      <WithStyles(ForwardRef(Checkbox))
        checked={true}
        indeterminate={false}
        inputProps={
          Object {
            "aria-label": "select all posts",
          }
        }
        onChange={[Function]}
      />
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="left"
      key="title"
      padding="none"
      sortDirection="asc"
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={true}
        data-test-id="head-sort-title"
        direction="asc"
        onClick={[Function]}
      >
        Title
        <Styled(span)>
          sorted ascending
        </Styled(span)>
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="left"
      key="author"
      padding="default"
      sortDirection={false}
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={false}
        data-test-id="head-sort-author"
        direction="asc"
        onClick={[Function]}
      >
        Author
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="left"
      key="date"
      padding="default"
      sortDirection={false}
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={false}
        data-test-id="head-sort-date"
        direction="asc"
        onClick={[Function]}
      >
        Date
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="left"
      key="tag"
      padding="default"
      sortDirection={false}
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={false}
        data-test-id="head-sort-tag"
        direction="asc"
        onClick={[Function]}
      >
        Tags
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="right"
      key="commentNum"
      padding="default"
      sortDirection={false}
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={false}
        data-test-id="head-sort-commentNum"
        direction="asc"
        onClick={[Function]}
      >
        Comments
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
  </WithStyles(ForwardRef(TableRow))>
</WithStyles(ForwardRef(TableHead))>
`;

exports[`Head should render Head with indetermine state checkbox 1`] = `
<WithStyles(ForwardRef(TableHead))>
  <WithStyles(ForwardRef(TableRow))>
    <WithStyles(ForwardRef(TableCell))
      padding="checkbox"
    >
      <WithStyles(ForwardRef(Checkbox))
        checked={false}
        indeterminate={true}
        inputProps={
          Object {
            "aria-label": "select all posts",
          }
        }
        onChange={[Function]}
      />
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="left"
      key="title"
      padding="none"
      sortDirection="asc"
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={true}
        data-test-id="head-sort-title"
        direction="asc"
        onClick={[Function]}
      >
        Title
        <Styled(span)>
          sorted ascending
        </Styled(span)>
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="left"
      key="author"
      padding="default"
      sortDirection={false}
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={false}
        data-test-id="head-sort-author"
        direction="asc"
        onClick={[Function]}
      >
        Author
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="left"
      key="date"
      padding="default"
      sortDirection={false}
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={false}
        data-test-id="head-sort-date"
        direction="asc"
        onClick={[Function]}
      >
        Date
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="left"
      key="tag"
      padding="default"
      sortDirection={false}
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={false}
        data-test-id="head-sort-tag"
        direction="asc"
        onClick={[Function]}
      >
        Tags
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="right"
      key="commentNum"
      padding="default"
      sortDirection={false}
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={false}
        data-test-id="head-sort-commentNum"
        direction="asc"
        onClick={[Function]}
      >
        Comments
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
  </WithStyles(ForwardRef(TableRow))>
</WithStyles(ForwardRef(TableHead))>
`;

exports[`Head should render with no error 1`] = `
<WithStyles(ForwardRef(TableHead))>
  <WithStyles(ForwardRef(TableRow))>
    <WithStyles(ForwardRef(TableCell))
      padding="checkbox"
    >
      <WithStyles(ForwardRef(Checkbox))
        checked={false}
        indeterminate={false}
        inputProps={
          Object {
            "aria-label": "select all posts",
          }
        }
        onChange={[Function]}
      />
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="left"
      key="title"
      padding="none"
      sortDirection="asc"
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={true}
        data-test-id="head-sort-title"
        direction="asc"
        onClick={[Function]}
      >
        Title
        <Styled(span)>
          sorted ascending
        </Styled(span)>
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="left"
      key="author"
      padding="default"
      sortDirection={false}
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={false}
        data-test-id="head-sort-author"
        direction="asc"
        onClick={[Function]}
      >
        Author
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="left"
      key="date"
      padding="default"
      sortDirection={false}
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={false}
        data-test-id="head-sort-date"
        direction="asc"
        onClick={[Function]}
      >
        Date
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="left"
      key="tag"
      padding="default"
      sortDirection={false}
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={false}
        data-test-id="head-sort-tag"
        direction="asc"
        onClick={[Function]}
      >
        Tags
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))
      align="right"
      key="commentNum"
      padding="default"
      sortDirection={false}
    >
      <WithStyles(ForwardRef(TableSortLabel))
        active={false}
        data-test-id="head-sort-commentNum"
        direction="asc"
        onClick={[Function]}
      >
        Comments
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
  </WithStyles(ForwardRef(TableRow))>
</WithStyles(ForwardRef(TableHead))>
`;
